// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test package-gets-updated: 00: left-pad should contain patch-package 1`] = `
"SNAPSHOT: left-pad should contain patch-package
    // devide \`len\` by 2, ditch the patch-package
END SNAPSHOT"
`;

exports[`Test package-gets-updated: 01: warning when the patch was applied but version changed 1`] = `
"SNAPSHOT: warning when the patch was applied but version changed
[1/4] Resolving packages...
[2/4] Fetching packages...
[3/4] Linking dependencies...
[4/4] Building fresh packages...
success Saved lockfile.
success Saved 1 new dependency.
info Direct dependencies
└─ patch-package@0.0.0
info All dependencies
└─ patch-package@0.0.0
$ patch-package
patch-package 0.0.0
Applying patches...
left-pad@1.1.1 ✔

Warning: patch-package detected a patch file version mismatch

  Don't worry! This is probably fine. The patch was still applied
  successfully. Here's the deets:

  Patch file created for

    left-pad@1.1.1

  applied to

    left-pad@1.1.2
  
  At path
  
    node_modules/left-pad

  This warning is just to give you a heads-up. There is a small chance of
  breakage even though the patch was applied successfully. Make sure the package
  still behaves like you expect (you wrote tests, right?) and then run

    patch-package left-pad

  to update the version in the patch file name and make this warning go away.

---
patch-package finished with 1 warning(s).
END SNAPSHOT"
`;

exports[`Test package-gets-updated: 02: left-pad should still contain patch-package 1`] = `
"SNAPSHOT: left-pad should still contain patch-package
    // devide \`len\` by 2, ditch the patch-package
END SNAPSHOT"
`;

exports[`Test package-gets-updated: 03: fail when the patch was not applied 1`] = `
"SNAPSHOT: fail when the patch was not applied
[1/4] Resolving packages...
[2/4] Fetching packages...
[3/4] Linking dependencies...
[4/4] Building fresh packages...
success Saved lockfile.
success Saved 1 new dependency.
info Direct dependencies
└─ left-pad@1.1.3
info All dependencies
└─ left-pad@1.1.3
$ patch-package
patch-package 0.0.0
Applying patches...

**ERROR** Failed to apply patch for package left-pad at path
  
    node_modules/left-pad

  This error was caused because left-pad has changed since you
  made the patch file for it. This introduced conflicts with your patch,
  just like a merge conflict in Git when separate incompatible changes are
  made to the same piece of code.

  Maybe this means your patch file is no longer necessary, in which case
  hooray! Just delete it!

  Otherwise, you need to generate a new patch file.

  To generate a new one, just repeat the steps you made to generate the first
  one.

  i.e. manually make the appropriate file changes, then run 

    patch-package left-pad

  Info:
    Patch file: patches/left-pad+1.1.1.patch
    Patch was made for version: 1.1.1
    Installed version: 1.1.3

---
patch-package finished with 1 error(s).
info Visit https://yarnpkg.com/en/docs/cli/add for documentation about this command.
END SNAPSHOT"
`;
